@startuml
hide empty members
skinparam classAttributeIconSize 0

package core {
  class Defaults <<final>> {
    +{static} STORAGE_PATH : String
    +{static} CHARSET : Charset
    +{static} SERVER_HOST : String
    +{static} SERVER_PORT : int
    +{static} RESPONSE_TIMEOUT : int
  }

  class Coordinates {
    -x : Float
    -y : Float
    +Coordinates(x: Float, y: Float)
    +getX() : Float
    +getY() : Float
    +setXY(x: Float, y: Float) : void
  }

  class Request <<Serializable>> {
    enum Status {INIT, COMMAND, PARAMETER_RESPONSE, GET_SCRIPT}
    +status : Status
    +command : String
    +parameterValue : String
    +sessionId : long
    +login : String
    +password : String
    +{static} command(text: String, login: String, password: String) : Request
    +{static} parameterResponse(sessionId: long, value: String, login: String, password: String) : Request
  }

  class Response <<Serializable>> {
    enum Status {SUCCESS, ERROR, NEED_PARAMETER, NEED_PASSWORD}
    +status : Status
    +data : List<Dragon>
    +message : String
    +parameterRequest : ParameterRequest
    +sessionId : long
    +{static} success(dragons: List, msg: String) : Response
    +{static} error(msg: String) : Response
    +{static} needParameter(sessionId: long, param: ParameterRequest) : Response
    +{static} needPassword(sessionId: long, param: ParameterRequest) : Response
  }

  class ParameterRequest <<Serializable>> {
    enum ParameterType {STRING, INTEGER, LONG, FLOAT, DRAGON_TYPE, DRAGON, ID}
    +parameterName : String
    +prompt : String
    +type : ParameterType
    +required : boolean
    +ParameterRequest(name, prompt, type, required)
  }

  class WireFrame <<final>> {
    +{static} MAGIC : int
    +{static} VERSION : short
    +{static} MAX_PACKET_SIZE : int
    +requestId : long
    +sessionId : long
    +flags : byte
    +payload : byte[]
    +toBytes() : byte[]
    +{static} fromBytes(raw: byte[], length: int) : WireFrame
    +{static} wrapRequest(request: Request, requestId: long) : WireFrame
    +{static} wrapResponse(response: Response, requestId: long) : WireFrame
    +unwrapRequest() : Request
    +unwrapResponse() : Response
  }
}

package dragon {
  enum DragonType {
    WATER
    UNDERGROUND
    AIR
    FIRE
  }

  class DragonHead {
    -size : float
    -toothCount : float
    +DragonHead(size: float, toothCount: float)
    +getSize() : float
    +getToothCount() : float
  }

  class Dragon {
    -id : Long
    -name : String
    -coordinates : Coordinates
    -creationDate : LocalDateTime
    -age : int
    -weight : long
    -speaking : boolean
    -type : DragonType
    -head : DragonHead
    +Dragon(name: String, coordinates: Coordinates, age: int, weight: long, type: DragonType, head: DragonHead)
    +Dragon(name: String, coordinates: Coordinates, age: int, weight: long)
    +getId() : long
    +getName() : String
    +getCoordinates() : Coordinates
    +getCreationDate() : LocalDateTime
    +getAge() : int
    +getWeight() : long
    +isSpeaking() : boolean
    +getType() : DragonType
    +getHead() : DragonHead
    +compareTo(other: Dragon) : int
  }
}

package "dragon.view" {
  interface View {
    +toView(stream: Stream<Dragon>) : InputStream
    +fromView(stream: OutputStream) : Stream<Dragon>
  }

  class JsonView {
    -gson : Gson
    +toView(stream: Stream<Dragon>) : InputStream
    +fromView(stream: OutputStream) : Stream<Dragon>
  }

  class StringView {
    +toView(stream: Stream<Dragon>) : InputStream
    +fromView(stream: OutputStream) : Stream<Dragon>
  }
}

package client {
  class Client {
    +{static} main(args: String[]) : void
  }

  class RequestClient <<AutoCloseable>> {
    -serverHost : String
    -serverPort : int
    -socket : DatagramSocket
    -nextRequestId : AtomicLong
    +RequestClient(host: String, port: int)
    +sendRequest(request: Request) : Response
    +close() : void
  }

  class CmdHandler <<Runnable>> {
    -requestClient : RequestClient
    -readers : Deque<BufferedReader>
    -login : String
    -password : String
    -consoleWriter : Writer
    +CmdHandler(requestClient: RequestClient)
    +run() : void
    -sendInput(line: String) : void
    -handleExecuteScript(line: String) : void
    -closeCurrentScriptIfAny() : boolean
    -stripQuotes(s: String) : String
  }
}


' --- Relationships ---
"dragon.Dragon" *-- "core.Coordinates"
"dragon.Dragon" *-- "dragon.DragonHead"
"dragon.Dragon" o-- "dragon.DragonType"

"dragon.view.JsonView" ..|> "dragon.view.View"
"dragon.view.StringView" ..|> "dragon.view.View"

"core.Response" --> "core.ParameterRequest"
"core.Response" --> "dragon.Dragon"
"core.WireFrame" --> "core.Request"
"core.WireFrame" --> "core.Response"

"client.Client" --> "client.CmdHandler"
"client.Client" --> "client.RequestClient"

"client.RequestClient" --> "core.WireFrame"
"client.RequestClient" --> "core.Request"
"client.RequestClient" --> "core.Response"

"client.CmdHandler" --> "client.RequestClient"
"client.CmdHandler" --> "core.Request"
"client.CmdHandler" --> "core.Response"
"client.CmdHandler" --> "core.ParameterRequest"
"client.CmdHandler" --> "dragon.view.StringView"

@enduml